@@ -4,16 +4,17 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
+
+[@Author::ETHER]
+:version = 0.025
+installer = ModuleBuildTiny ; we add our own Makefile.PL, and munge this Build.PL
+Prereqs::AuthorDeps.exclude[0] = inc::DownloadShareDirContent
+Prereqs::AuthorDeps.exclude[1] = inc::RequireExecutable
+
 ; comment this out if doing a lot of release-time testing that does not
 ; require running the application, so we don't hammer github
 [=inc::DownloadShareDirContent]
 url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console.zip
-
-[@Author::ETHER]
-:version = 0.025
-installer = none    ; we add our own
-Prereqs::AuthorDeps.exclude[0] = inc::DownloadShareDirContent
-Prereqs::AuthorDeps.exclude[1] = inc::RequireExecutable
 
 [=inc::RequireExecutable]
 executable = php-cgi
